# Trinet-SDK

./: .gitignore  Package.swift  README.md  settings.gradle.kts
aar/: trinet-sdk-0.1.0.aar  trinet-sdk-0.1.4.aar  trinet-sdk-0.1.5.aar  trinet-sdk-0.1.6.aar  trinet-sdk-0.1.7.aar  trinet-sdk-0.1.8.aar  trinet-sdk-0.2.0.aar  trinet-sdk-0.2.1.aar  trinet-sdk-0.2.2.aar
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/panoculon/trinet/app/: AttachedDeviceCache.kt  MainActivity.kt  TrinetApp.kt  UsbAttachReceiver.kt
app/src/main/kotlin/com/panoculon/trinet/app/data/: AppPaths.kt  RecordingActions.kt  RecordingInfo.kt
app/src/main/kotlin/com/panoculon/trinet/app/ui/: HomeScreen.kt  InfoDialog.kt  LibraryScreen.kt  PlayerScreen.kt  RecordScreen.kt  TrajectoryScreen.kt  TrinetNavHost.kt
app/src/main/kotlin/com/panoculon/trinet/app/viewmodel/: DeviceViewModel.kt  LibraryViewModel.kt  (+3 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml  file_paths.xml
docs/: TRANSPORT.md  api-reference.md  file-formats.md  getting-started.md  imu.md  imu_camera_synchronization.md  playback.md  recording.md  streaming.md
gradle/: libs.versions.toml
ios/: README.md  trinet_mode.conf
ios/Sources/TrinetSDK/: TrinetSDK.swift
ios/Sources/TrinetSDK/Decode/: LivePreviewView.swift  VideoDecoder.swift
ios/Sources/TrinetSDK/Device/: TrinetDevice.swift  TrinetDiscovery.swift  TrinetLiveSession.swift
ios/Sources/TrinetSDK/Model/: CalibrationBlob.swift  DeviceConfig.swift  ImuSample.swift  VtsEntry.swift
ios/Sources/TrinetSDK/Playback/: ImuPlaybackData.swift  MadgwickAHRS.swift  RecordingInfo.swift
ios/Sources/TrinetSDK/Recording/: ImuFileWriter.swift  Mp4Writer.swift  TrinetRecorder.swift  VtsFileWriter.swift
ios/Sources/TrinetSDK/Transport/: DeviceAPI.swift  InterfacePinning.swift  SyncCoordinator.swift  TrinetSEI.swift  VideoStream.swift
ios/Sources/TrinetSDK/UI/: ImuPlotView.swift  OrientationCubeView.swift  PlaybackImuTrackView.swift
ios/Tests/TrinetSDKTests/: ImuFormatTests.swift
ios/TrinetApp/: project.yml
ios/TrinetApp/Resources/: Info.plist
ios/TrinetApp/Sources/: ContentView.swift  TrinetAppMain.swift
ios/TrinetApp/Sources/ViewModels/: ControlsViewModel.swift  DeviceViewModel.swift  RecordViewModel.swift
ios/TrinetApp/Sources/Views/: ControlsView.swift  HomeView.swift  LibraryView.swift  RecordView.swift  SettingsView.swift
ios/docs/: PROTOCOLS.md
keystore/: README.md
tools/: README.md  requirements.txt  trinet_live_viewer.py
trinet-sdk/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
trinet-sdk/src/main/: AndroidManifest.xml
trinet-sdk/src/main/cpp/: CMakeLists.txt  libuvc_jni.cpp
trinet-sdk/src/main/kotlin/com/panoculon/trinet/sdk/: TrinetSdk.kt
trinet-sdk/src/main/res/xml/: trinet_device_filter.xml
(+45 files in other folders)
